# domain_scanner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report.md
.github/workflows/: test.yml
src/domain_scanner/: cli.py  crew.py  main.py
src/domain_scanner/config/: agents.yaml  tasks.yaml
src/domain_scanner/tools/: domain_tools.py
tests/: test_crew.py  test_domain_tools.py
