[project]
name = "domain_scanner"
version = "0.1.0"
description = "domain_scanner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.13.0"
dependencies = [
    "crewai==1.11.0",
    "litellm>=1.82.5",
    "dnspython>=2.8.0",
    "wappalyzer>=1.0.20",
    "py-spy>=0.4.1",
]

[project.scripts]
scan = "domain_scanner.cli:main"
train = "domain_scanner.main:train"
replay = "domain_scanner.main:replay"
test = "domain_scanner.main:test"
run_with_trigger = "domain_scanner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
